splitting into modules and adding orders

--- a/client/src/app/components/products/details/details.component.html
+++ b/client/src/app/components/products/details/details.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="product" class="row align-items-center my-5">
     <div class="col-lg-5">
         <img class="img-fluid rounded mb-4 mb-lg-0" src={{product.imageUrl}} alt="product" />
-    <!-- </div> -->
+    </div>
     <div class="col-lg-5 details">
         <h1 class="font-weight-light">{{product.title}}</h1>
         <p>{{product.description}}</p>
