--- a/client/src/app/components/shopping-cart/shopping-cart/shopping-cart.component.html
+++ b/client/src/app/components/shopping-cart/shopping-cart/shopping-cart.component.html
@@ -41,10 +41,10 @@
         <div class="col mb-2">
             <div class="row">
                 <div class="col-sm-12  col-md-6">
-                    <button class="btn btn-block btn-light">Continue Shopping</button>
+                    <a routerLink="/"> <button class="btn btn-block btn-light">Continue Shopping</button> </a>
                 </div>
                 <div class="col-sm-12 col-md-6 text-right">
-                    <button class="btn btn-lg btn-block btn-success text-uppercase">Checkout</button>
+                    <button class="btn btn-lg btn-block btn-success text-uppercase" (click)="checkout()">Checkout</button>
                 </div>
             </div>
         </div>
