--- a/client/src/app/components/comments/show-comment/show-comment.component.css
+++ b/client/src/app/components/comments/show-comment/show-comment.component.css
@@ -1,4 +1,4 @@
-.thumbnail {
+/* .thumbnail {
     padding:0px;
 }
 .panel {
@@ -25,4 +25,4 @@
 .panel>.panel-heading:before{
 	border-right-color:#ddd;
 	border-width:8px;
-}
+} */
