--- a/client/src/app/components/products/product/product.component.html
+++ b/client/src/app/components/products/product/product.component.html
@@ -10,9 +10,9 @@
             <h5>${{product.price}}</h5>
             <p class="card-text">{{product.description}}</p>
         </div>
-        <div class="card-footer">
+        <!-- <div class="card-footer">
             <small class="text-muted">★ ★ ★ ★ ☆</small>
-        </div>
+        </div> -->
         </div>
     </div>
 </div>
