--- a/client/src/app/components/shopping-cart/shopping-cart/shopping-cart.component.css
+++ b/client/src/app/components/shopping-cart/shopping-cart/shopping-cart.component.css
@@ -58,3 +58,11 @@ footer {
 footer a {
     color: #f8f9fa!important
 }
+
+.btn-continue-link {
+    text-decoration: none;
+}
+.btn-continue {
+	padding-bottom: 7.5px;
+	line-height: 2;
+}
