--- a/client/src/app/components/comments/create-comment/create-comment.component.html
+++ b/client/src/app/components/comments/create-comment/create-comment.component.html
@@ -1,5 +1,5 @@
 <form #f="ngForm" (ngSubmit)="handleSubmit(f)" >
-  <div class="p-3 p-lg-5 border">
+  <div class="col-md-12 p-3 p-lg-5 border">
     <div class="form-group">
       <label for="exampleInputEmail1">Content</label>
       <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter your comment"
