--- a/client/src/app/components/shared/header/header.component.html
+++ b/client/src/app/components/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-md-5 mb-5">
-  <a class="navbar-brand" href="#">Navbar w/ text</a>
+  <a class="navbar-brand" routerLink="/">Easy Peasy Web Shop</a>
   <button class="navbar-toggler" (click)="toggleMenu()" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -15,10 +15,16 @@
         <a class="nav-link" routerLink="/login">Login</a>
       </li>
       <li *ngIf="authService.isUserLogged() && authService.isAdmin()" class="nav-item">
-        <a class="nav-link" routerLink="admin/create">Create Product</a>
+        <a class="nav-link" routerLink="admin/create/product">Create Product</a>
       </li>
       <li *ngIf="authService.isUserLogged() && authService.isAdmin()" class="nav-item">
         <a class="nav-link" routerLink="admin/orders">Orders</a>
+      </li>
+      <li *ngIf="authService.isUserLogged() && authService.isAdmin()" class="nav-item">
+        <a class="nav-link" routerLink="admin/create/category">Add New Category</a>
+      </li>
+      <li *ngIf="authService.isUserLogged() && authService.isAdmin()" class="nav-item">
+        <a class="nav-link" routerLink="admin/products">Manage Products</a>
       </li>
     </ul>
     <span *ngIf="authService.isUserLogged()" class="navbar-text">
