--- a/client/src/app/components/admin/edit-product/edit-product.component.html
+++ b/client/src/app/components/admin/edit-product/edit-product.component.html
@@ -23,7 +23,7 @@
         Price is required.
       </div>
       <div *ngIf="f.price.errors?.pattern && f.price.touched" class="alert alert-danger">
-        Price must be a number.
+        Price must be a number and must greater then zero.
       </div>
     </div>
     <div class="form-group">
