--- a/client/src/app/components/auth/register/register.component.html
+++ b/client/src/app/components/auth/register/register.component.html
@@ -43,7 +43,7 @@
           </div>
         </div>
       </div>
-      <div class="form-group row">
+      <!-- <div class="form-group row">
         <div class="col-md-12">
           <label for="r_phone" class="text-black">Phone </label>
           <input type="text" class="form-control" id="r_phone"
@@ -57,7 +57,7 @@
             Phone is required
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="form-group">
         <label for="password">Password</label>
