--- a/client/src/app/components/admin/orders-admin/orders-admin.component.html
+++ b/client/src/app/components/admin/orders-admin/orders-admin.component.html
@@ -1,3 +1,4 @@
+<app-heading [title]="'Orders'"></app-heading>
 <table class="table">
     <thead>
       <tr>
@@ -24,4 +25,4 @@
         <ng-template #other_content> <td> Processed </td> </ng-template>
       </tr>
     </tbody>
-  </table>
+</table>
