--- a/client/src/app/components/products/details/details.component.html
+++ b/client/src/app/components/products/details/details.component.html
@@ -1,3 +1,4 @@
+<app-heading [title]="'Details'"></app-heading>
 <div *ngIf="product" class="row align-items-center my-5">
     <div class="col-lg-5">
         <img class="img-fluid rounded mb-4 mb-lg-0" src={{product.imageUrl}} alt="product" />
