--- a/client/src/app/components/shared/footer/footer.component.html
+++ b/client/src/app/components/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="copyright py-4 text-center">
+    <div class="copyright py-4 text-center text-white">
         <small>Copyright &copy; Mystery Inc. 2019</small>
     </div>
 </footer>
