--- a/client/src/app/components/admin/list-products/list-products.component.html
+++ b/client/src/app/components/admin/list-products/list-products.component.html
@@ -1,3 +1,4 @@
+<app-heading [title]="'Manage Products'"></app-heading>
 <table class="table">
     <thead>
       <tr>
@@ -19,4 +20,4 @@
         </td>
       </tr>
     </tbody>
-  </table>
+</table>
