--- a/client/src/app/components/auth/login/login.component.html
+++ b/client/src/app/components/auth/login/login.component.html
@@ -1,3 +1,5 @@
+<app-heading [title]="'Login'"></app-heading>
+
 <form #f="ngForm" (ngSubmit)="handleSubmit()" >
   <div class="p-3 p-lg-5 border">
     <div class="form-group">
