--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<app-heading [title]="'Browse'"></app-heading>
 <div class="row">
     <div class="col-md-3">
         <app-categories></app-categories>
