--- a/client/src/app/components/products/product/product.component.html
+++ b/client/src/app/components/products/product/product.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="products" class="row">
-    <div *ngFor="let product of products;" class="col-lg-4 col-md-6 mb-4">
+    <div *ngFor="let product of products|  slice: (page-1) * pageSize : (page-1) * pageSize + pageSize" class="col-lg-4 col-md-6 mb-4">
         <div class="card h-100">
         <a routerLink="product/details/{{product.id}}" ><img class="card-img-top" src="{{product.imageUrl}}" alt=""></a>
         <div class="card-body">
@@ -16,3 +16,4 @@
         </div>
     </div>
 </div>
+<ngb-pagination *ngIf="products" [(page)]="page" [pageSize]="pageSize" [collectionSize]="products.length"></ngb-pagination>
