--- a/client/src/app/components/users/orders-user/orders-user.component.html
+++ b/client/src/app/components/users/orders-user/orders-user.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let order of (orders$ | async); let i = index">
   <br>
-  <h3>Order # {{ i + 1 }}</h3>
+  <h3>Order # {{ i + 1 }}  <span class="pull-right"> Status: {{ order.status }} </span> </h3>
   <hr>
   <br>
     <table class="table table-borderless">
@@ -10,12 +10,14 @@
       <th>Total</th>
       <tr *ngFor="let details of order.orderDetails">
           <td class="product-info-cell">
-            <a routerLink="/product/details/{{details.product.id}}"> <img width="100" height="100" src="{{details.product.imageUrl}}" alt="product"/> </a>
+            <a routerLink="/product/details/{{details.product.id}}">
+                <img src="{{details.product.imageUrl}}" class="img-thumbnail img-sm">
+            </a>
             <span class="product-name">{{details.product.title}}</span>
           </td>
-          <td> <br> x {{ details.orderedQuantity }}</td>
-          <td> <br> {{ details.product.price }}</td>
-          <td> <br> {{ details.orderedQuantity * details.product.price }}</td>
-        <tr>
+          <td> <br> x {{ details.orderedQuantity }} </td>
+          <td> <br> {{ details.product.price }} </td>
+          <td> <br> {{ details.orderedQuantity * details.product.price }} </td>
+      <tr>
     </table>
 </div>
